# z_tech_exam

./: .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_z_tech_exam.py
z_tech_exam/: get_characters.py  main.py  marvel.ipynb  transform.py
